# depraved_bot

./: .gitignore  Dockerfile  config.yaml  config_test.yaml  docker-compose.yml  pyproject.toml
depraved_bot/: __init__.py  check_roles.py  config.py  kinks.py
depraved_bot/cogs/: __init__.py  cache_roles.py  ping.py  role_checker.py
depraved_bot/structures/: kinks.py
depraved_bot/utils/: __init__.py  check_roles.py  init_tables.py
depraved_bot/views/: __init__.py  role_checker_view.py
