[tool.poetry]
name = "depraved-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MPL-2.0"
readme = "README.md"
packages = [{include = "depraved_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
disnake = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
