[tool.poetry]
name = "depraved-bot"
version = "0.1.0"
description = ""
authors = ["unriellistic <charliewindle@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
packages = [{include = "depraved_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
disnake = "^2.8.0"
python-dotenv = "^0.21.1"
pyyaml = "^6.0"
psycopg2 = "^2.9.5"
sqlalchemy = "^2.0.7"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
